Fixed multiple scrollbar issue on the page.

--- a/src/app/components/messages/messages.component.css
+++ b/src/app/components/messages/messages.component.css
@@ -5,7 +5,7 @@
 }
 
 .list-wrapper {
-  max-height: 392px;
+  max-height: 340px;
   overflow-y: auto;
 }
 
